[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Load Table/Card.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Fonts_MainMenuButtons.tres" type="DynamicFont" id=3]
[ext_resource path="res://Base_Images/Table_Base_Image_d6_6.png" type="Texture" id=5]

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;
uniform sampler2D Dice_Tex;
uniform sampler2D Tex;
uniform vec3 color;
uniform float alpha;



void vertex() {
// Output:0

}

void fragment() {
// Color:10
	vec3 n_out10p0 = vec3(color);
	float n_out10p1 = 1.000000;

// Texture:9
	vec4 tex_frg_9_read = texture(Dice_Tex, UV.xy);
	vec3 n_out9p0 = tex_frg_9_read.rgb;
	float n_out9p1 = tex_frg_9_read.a;

// VectorScalarMix:8
	vec3 n_out8p0 = mix(n_out10p0, n_out9p0, n_out9p1);

// TextureUniform:12
	vec3 n_out12p0;
	float n_out12p1;
	{
		vec4 n_tex_read = texture(Tex, UV.xy);
		n_out12p0 = n_tex_read.rgb;
		n_out12p1 = n_tex_read.a;
	}

// VectorScalarMix:11
	float n_in11p2 = alpha;
	vec3 n_out11p0 = mix(n_out8p0, n_out12p0, n_in11p2);

// Output:0
	COLOR.rgb = n_out11p0;

}

void light() {
// Output:0

}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 8 )
shader_param/color = Vector3( 55, 15, 55 )
shader_param/alpha = 0.0

[node name="Card" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 55.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete_Table" type="Button" parent="VBoxContainer"]
margin_right = 55.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "Delete"

[node name="Edit_Table" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 55.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
text = "Edit"

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 7 )
margin_left = 59.0
margin_right = 259.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 5 )

[node name="Table Description" type="HBoxContainer" parent="."]
margin_left = 263.0
margin_right = 663.0
margin_bottom = 200.0
size_flags_horizontal = 3

[node name="Table_desc_itens" type="VBoxContainer" parent="Table Description"]
margin_right = 400.0
margin_bottom = 200.0
size_flags_horizontal = 3
alignment = 1

[node name="Table Name" type="LineEdit" parent="Table Description/Table_desc_itens"]
margin_right = 400.0
margin_bottom = 49.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = ExtResource( 3 )
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="Table Description/Table_desc_itens"]
margin_top = 53.0
margin_right = 400.0
margin_bottom = 166.0
rect_min_size = Vector2( 400, 112 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Desc"
readonly = true
fold_gutter = true

[node name="HBoxContainer" type="HBoxContainer" parent="Table Description/Table_desc_itens"]
margin_top = 170.0
margin_right = 400.0
margin_bottom = 200.0

[node name="ColorRect" type="ColorRect" parent="Table Description/Table_desc_itens/HBoxContainer"]
margin_right = 358.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 0
color = Color( 0.47451, 0.403922, 0.313726, 1 )

[node name="Play_Scene" type="Button" parent="Table Description/Table_desc_itens/HBoxContainer"]
margin_left = 362.0
margin_right = 400.0
margin_bottom = 30.0
size_flags_horizontal = 0
text = "Play"

[node name="Save" type="Button" parent="Table Description/Table_desc_itens/HBoxContainer"]
visible = false
margin_left = 359.0
margin_right = 400.0
margin_bottom = 30.0
size_flags_horizontal = 0
text = "Save"

[connection signal="button_up" from="VBoxContainer/Delete_Table" to="." method="_on_Delete_Table_button_up"]
[connection signal="button_up" from="VBoxContainer/Edit_Table" to="." method="_on_Edit_Table_button_up"]
[connection signal="button_up" from="Table Description/Table_desc_itens/HBoxContainer/Play_Scene" to="." method="_on_Play_Scene_button_up"]
[connection signal="button_up" from="Table Description/Table_desc_itens/HBoxContainer/Save" to="." method="_on_Save_button_up"]
